gcc/testsuite/rust/rustc/ui/static/static-mut-bad-types.rs
static mut a: isize = 3;

fn main() {
    unsafe {
        a = true; // { dg-error ".E0308." "" { target *-*-* } }
    }
}

